Prepare package for global install and add non-root sudo support
- Rename `bin/console` to `bin/pool-pilot` and update `composer.json` metadata.
- Update `CreateUserCommand` to detect execution user and prepend `sudo` to system commands if not root.
- Refactor Nginx symlinking and file creation to use shell commands for privilege escalation.
- Update `README.md` with global installation instructions and secure mode documentation.

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
+    "name": "amouhzi/pool-pilot",
+    "description": "A command-line tool to simplify the management of multiple PHP applications on a single server using PHP-FPM pools.",
     "type": "project",
-    "license": "proprietary",
+    "license": "MIT",
     "minimum-stability": "stable",
     "prefer-stable": true,
+    "bin": ["bin/pool-pilot"],
     "require": {
         "php": ">=8.2",
         "ext-ctype": "*",
@@ -24,11 +27,6 @@
     "autoload": {
         "psr-4": {
             "App\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
         }
     },
     "conflict": {
